# Azure-Hack-2024

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: deploy-test_fism.yml  main_fism-api.yml  main_fism.yml
src/: app.py  chat.py  cosmos.py  create_vecterindex.py  image.py  vecterindex.py  vectersearch.py
src/notebook/: test.ipynb
tests/: test_app.py
